# agent-ready-sdk

./: .gitignore  README.md
js/: LICENSE  README.md  package-lock.json  package.json  tsconfig.json
js/src/: index.ts
js/test/: sdk.test.ts
python/: README.md  pyproject.toml
python/src/agent_ready/: __init__.py  client.py
python/tests/: test_sdk.py
